[tool.poetry]
name = "adventure_proto"
version = "0.1"
description = "Prototype of Bobux bot adventure game available on Windows"
authors = ["Exenifix"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
exenworldgen = "^1.0"
keyboard = "^0.13.5"
exencolor = "^1.1.3"

[tool.ruff]
target-version = "py311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
